--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,23 @@
     margin: 0;
     padding: 0;
     -webkit-appearance: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 62.5%;
-  }
+    font-family: 'Roboto';
+}
+
+html {
+  font-size: 62.5%;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+body {
+  background-color: $secondary;
+}
