feat: основная вёрстка таблицы

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
 .app {
-    display: flex;
-    flex-direction: column;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
+
+    &__main {
+        display: flex;
+        flex: 1; 
+        height: 100%;
+    }
 }
