--- a/src/components/HeaderTitles/HeaderTitles.style.scss
+++ b/src/components/HeaderTitles/HeaderTitles.style.scss
@@ -10,8 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 12%;
-        min-width: 22rem;
+        width: 22rem;
         padding-left: 2rem;
         padding-right: .3rem;
         border-right: 1px solid $tertiary;
