--- a/src/components/Table/Table.style.scss
+++ b/src/components/Table/Table.style.scss
@@ -1,80 +1,65 @@
 .table {
-    height: fit-content;
-    padding: 0 1.1rem;
+    height: 100%;
     width: 100%;
+    padding: 0 1.1rem;
     font-size: 1.4rem;
+  
+    &__content {
+        display: block;
+        height: 90%;
+        overflow: auto;
 
-    &__header,
-    &__row {
-        display: grid;
-        height: 100%;
-        grid-template-columns: 10.1rem 1fr 20rem 20rem 20rem 20rem;
-        border-bottom: 1px solid $tertiary;
-    }
-
-    th {
-        text-align: start;
-    }
-
-    td {
-        display: flex;
-        height: fit-content;
+        &::-webkit-scrollbar {  
+              width: 1.5rem;
+              height: .5rem;    
+          }  
+          
+        &::-webkit-scrollbar-thumb {  
+            background: $tertiary; 
+            border-radius: 6px;  
+        }  
+        
+        &::-webkit-scrollbar-thumb:hover {  
+            background: #555;
+        }  
     }
 
     &__header {
+        display: grid;
+        grid-template-columns: 10rem 1fr 20rem 20rem 20rem 20rem;
+        height: max-content;
+        padding: 1.1rem 0;
+        border-bottom: 1px solid $tertiary;
+        text-align: start;  
         color: $font-secondary;
-        padding: 1.1rem 0 1.1rem 1.1rem;
-    }
-      
-    &__row {
-        align-items: center;
-        color: $font-primary;
-        padding: 1.3rem 0 1.3rem 1.1rem;
+
+        th {
+            text-align: start;
+      }
     }
 
-    &__img-container {
-        display: flex;
-        align-items: center;
-        width: fit-content;
-        gap: .5rem;
-        padding: .5rem .8rem .5rem .5rem;
+    &__skeleton {
+        display: block;
+        width: 100%;
+        height: 6rem;
+        margin-top: 1rem;
+        border-bottom: 1px solid $tertiary;
+        border-radius: 4px;
+        background-color: $primary;
+        animation: pulse 1s infinite;
     }
-
-    &__row--img {  
-        display: flex;
-        position: relative;
-
-        &:first-child {
-            content: none;
-        }
-        &::after {  
-            position: absolute;  
-            content: "";
-            top: 83%;
-            left: 50%;
-            width: 1%;  
-            height: 5.7rem;  
-            background-color: #C6C6C6;  
-            transform: translateX(-50%);
-        }  
-
-        &::before {  
-            position: absolute;  
-            content: "";
-            top: 50%;
-            right: 66%;
-            width: 34%;  
-            height: 1%;  
-            background-color: #C6C6C6;  
-            transform: translateX(-50%);
-        }  
-    }  
-
-    &__hide-before::before {  
-        content: none;
-    }  
-
-    &__hide-after::after {  
-        content: none;
-    }  
 }
+
+
+
+@keyframes pulse {  
+  0% {  
+      opacity: 1;  
+  }  
+  50% {  
+      opacity: 0.5;  
+  }  
+  100% {  
+      opacity: 1;  
+  }  
+}  
