--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,11 @@
 .app {
     width: 100vw;
     height: 100vh;
+    // overflow: hidden;
 
     &__main {
         display: flex;
         flex: 1; 
-        height: 100%;
+        height: 100vh;;
     }
 }
